Aula2: parâmetros e PDF export

--- a/02-ModeloBengio/Aula_1_2_Exercício_Modelo_de_Linguagem_(Bengio_2003)_MLP_+_Embeddings.ipynb
+++ b/02-ModeloBengio/Aula_1_2_Exercício_Modelo_de_Linguagem_(Bengio_2003)_MLP_+_Embeddings.ipynb
@@ -1005,6 +1005,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 905,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Layer 0, 76800 weights, 300 bias\n",
+            "Layer 1, 768000 weights, 3000 bias\n",
+            "Layer 2, 900000 weights, 0 bias\n"
+          ]
+        }
+      ],
+      "source": [
+        "layers = [model.linear1, model.linear2, model.linear3]\n",
+        "\n",
+        "for i in range(len(layers)):\n",
+        "    layer = layers[i]\n",
+        "    weights = np.prod(layer.weight.shape)\n",
+        "\n",
+        "    if layer.bias is None:\n",
+        "        bias = 0\n",
+        "    else:\n",
+        "        bias = np.prod(layer.bias.shape)\n",
+        "    \n",
+        "    print(f\"Layer {i}, {weights} weights, {bias} bias\")"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
