Aula 2: print das camadas

--- a/02-ModeloBengio/Aula_1_2_Exercício_Modelo_de_Linguagem_(Bengio_2003)_MLP_+_Embeddings.ipynb
+++ b/02-ModeloBengio/Aula_1_2_Exercício_Modelo_de_Linguagem_(Bengio_2003)_MLP_+_Embeddings.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 899,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 722,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -800,7 +800,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 752,
+      "execution_count": 5,
       "metadata": {
         "id": "I2qKG9YczJ_K"
       },
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 753,
+      "execution_count": 6,
       "metadata": {
         "id": "7yjQ1KXOzJ_K"
       },
@@ -1006,20 +1006,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 905,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Layer 0, 76800 weights, 300 bias\n",
-            "Layer 1, 768000 weights, 3000 bias\n",
-            "Layer 2, 900000 weights, 0 bias\n"
+            "C layer: 4 input, 256 output, 192000 weights\n",
+            "Layer linear0:  256 input, 300 output, 76800 weights, 300 bias\n",
+            "Layer linear1:  256 input, 3000 output, 768000 weights, 3000 bias\n",
+            "Layer linear2:  300 input, 3000 output, 900000 weights, 0 bias\n"
           ]
         }
       ],
       "source": [
+        "print(f\"C layer: {context_size} input, {context_size*embed_dim} output, {np.prod(model.C.shape)} weights\")\n",
+        "\n",
         "layers = [model.linear1, model.linear2, model.linear3]\n",
         "\n",
         "for i in range(len(layers)):\n",
@@ -1031,7 +1034,7 @@
         "    else:\n",
         "        bias = np.prod(layer.bias.shape)\n",
         "    \n",
-        "    print(f\"Layer {i}, {weights} weights, {bias} bias\")"
+        "    print(f\"Layer linear{i}:  {layer.in_features} input, {layer.out_features} output, {weights} weights, {bias} bias\")"
       ]
     },
     {
