--- a/03-AutoAtenção/Aula_2_3_Exercício_Modelo_de_Linguagem_com_auto_atenção.ipynb
+++ b/03-AutoAtenção/Aula_2_3_Exercício_Modelo_de_Linguagem_com_auto_atenção.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 314,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -38,7 +38,7 @@
         "import abc\n",
         "\n",
         "import numpy as np\n",
-        "from numpy.testing import assert_raises, assert_array_equal\n",
+        "from numpy.testing import assert_raises, assert_array_equal, assert_array_almost_equal\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "from torch.utils.data import Dataset, DataLoader\n",
@@ -548,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 161,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -569,6 +569,8 @@
         "        self.wV = torch.nn.Parameter(self.wV)\n",
         "        self.w0 = torch.nn.Parameter(self.w0)\n",
         "\n",
+        "        self.dk_root = torch.sqrt(torch.tensor(embed_dim, dtype=torch.float32))\n",
+        "\n",
         "        for w in [self.wQ, self.wK, self.wV, self.w0]:\n",
         "            torch.nn.init.xavier_uniform_(w)\n",
         "    \n",
@@ -580,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 246,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -590,12 +592,15 @@
         "        super().__init__(embed_dim)\n",
         "\n",
         "    def forward(self, query:torch.Tensor, key:torch.Tensor, value:torch.Tensor) -> torch.Tensor:\n",
-        "        Q = self.wQ @ query\n",
-        "        K = self.wK @ key\n",
-        "        V = self.wV @ value\n",
+        "        print(self.wQ.shape, query.shape)\n",
+        "        \n",
+        "        Q = query @ self.wQ\n",
+        "        K = key @ self.wK\n",
+        "        V = value @ self.wV\n",
         "\n",
         "\n",
         "        scores = Q @ K.permute(0,2,1)\n",
+        "        scores /= self.dk_root\n",
         "        probs = torch.softmax(scores, dim=-1)\n",
         "        E = probs @ V\n",
         "\n",
@@ -606,7 +611,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 247,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -650,38 +655,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 328,
       "metadata": {},
       "outputs": [],
       "source": [
         "test_embed_dim = 5\n",
-        "matrix_version = SingleHeadAttention(test_embed_dim)\n",
-        "loop_version = SingleHeadAttentionLoop(test_embed_dim)\n",
-        "torch_version = torch.nn.MultiheadAttention(test_embed_dim, num_heads=1, bias=False)"
+        "matrix_version = SingleHeadAttention(test_embed_dim).eval()\n",
+        "loop_version = SingleHeadAttentionLoop(test_embed_dim).eval()\n",
+        "torch_version = torch.nn.MultiheadAttention(test_embed_dim, num_heads=1, bias=False, batch_first=True).eval()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 329,
       "metadata": {},
       "outputs": [],
       "source": [
-        "#wQ = matrix_version.wQ\n",
-        "#wK = matrix_version.wK\n",
-        "#wV = matrix_version.wV\n",
-        "#w0 = matrix_version.w0\n",
+        "wQ = matrix_version.wQ\n",
+        "wK = wQ\n",
+        "wV = wQ\n",
+        "w0 = wQ\n",
         "\n",
-        "wQ = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
-        "wK = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
-        "wV = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
-        "w0 = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
+        "#wQ = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
+        "#wK = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
+        "#wV = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
+        "#w0 = torch.nn.Parameter(torch.ones((test_embed_dim, test_embed_dim)))\n",
+        "\n",
+        "#wQ = torch.nn.Parameter(torch.eye(test_embed_dim))\n",
+        "#wK = torch.nn.Parameter(torch.eye(test_embed_dim))\n",
+        "#wV = torch.nn.Parameter(torch.eye(test_embed_dim))\n",
+        "#w0 = torch.nn.Parameter(torch.eye(test_embed_dim))\n",
         "\n",
         "matrix_version.wQ = wQ\n",
         "matrix_version.wK = wK\n",
@@ -693,35 +696,45 @@
         "loop_version.wV = wV\n",
         "loop_version.w0 = w0\n",
         "\n",
-        "torch_version.q_proj_weight = wQ\n",
-        "torch_version.k_proj_weight = wK\n",
-        "torch_version.v_proj_weight = wV\n",
-        "torch_version.out_proj.weight = w0\n"
+        "#torch_version.q_proj_weight = wQ\n",
+        "#torch_version.k_proj_weight = wK\n",
+        "#torch_version.v_proj_weight = wV\n",
+        "torch_version.in_proj_weight = torch.nn.Parameter(torch.concat((wQ, wK, wV)))\n",
+        "torch_version.out_proj.weight = w0\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 330,
       "metadata": {},
       "outputs": [],
       "source": [
-        "test_data = torch.rand(2, 5, test_embed_dim)"
+        "test_data = torch.ones((2, 3, test_embed_dim))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 331,
       "metadata": {},
       "outputs": [],
       "source": [
-        "test_data = torch.ones((2, 5, test_embed_dim))"
+        "test_data = torch.rand(2, 3, test_embed_dim)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 332,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "torch.Size([5, 5]) torch.Size([2, 3, 5])\n"
+          ]
+        }
+      ],
       "source": [
         "result_matrix = matrix_version(test_data, test_data, test_data)\n",
         "result_loop = loop_version(test_data, test_data, test_data)\n",
@@ -730,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 333,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -741,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 334,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -751,55 +764,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "assert_array_equal(result_matrix, result_loop)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 335,
       "metadata": {},
       "outputs": [
         {
           "ename": "AssertionError",
-          "evalue": "\nArrays are not equal\n\nMismatched elements: 50 / 50 (100%)\nMax absolute difference: 24.358696\nMax relative difference: 37.983047\n x: array([[[25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],...\n y: array([[[0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],...",
+          "evalue": "\nArrays are not almost equal to 6 decimals\n\nMismatched elements: 30 / 30 (100%)\nMax absolute difference: 0.07272851\nMax relative difference: 1.7289221\n x: array([[[-0.737511,  0.418121,  0.302359, -0.0113  , -0.870395],\n        [-0.745576,  0.393842,  0.322722,  0.004232, -0.834106],\n        [-0.74752 ,  0.365238,  0.344328,  0.020905, -0.786164]],...\n y: array([[[-0.73273 ,  0.462243,  0.268469, -0.037401, -0.943123],\n        [-0.75386 ,  0.414645,  0.310067, -0.005806, -0.875633],\n        [-0.757841,  0.357597,  0.353191,  0.027468, -0.780088]],...",
           "output_type": "error",
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-129-7f817b6360ea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0massert_array_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_matrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_torch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;32m<ipython-input-335-5e14f33c7b54>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0massert_array_almost_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_matrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_loop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
             "    \u001b[1;31m[... skipping hidden 2 frame]\u001b[0m\n",
-            "\u001b[1;31mAssertionError\u001b[0m: \nArrays are not equal\n\nMismatched elements: 50 / 50 (100%)\nMax absolute difference: 24.358696\nMax relative difference: 37.983047\n x: array([[[25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],...\n y: array([[[0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],..."
+            "\u001b[1;31mAssertionError\u001b[0m: \nArrays are not almost equal to 6 decimals\n\nMismatched elements: 30 / 30 (100%)\nMax absolute difference: 0.07272851\nMax relative difference: 1.7289221\n x: array([[[-0.737511,  0.418121,  0.302359, -0.0113  , -0.870395],\n        [-0.745576,  0.393842,  0.322722,  0.004232, -0.834106],\n        [-0.74752 ,  0.365238,  0.344328,  0.020905, -0.786164]],...\n y: array([[[-0.73273 ,  0.462243,  0.268469, -0.037401, -0.943123],\n        [-0.75386 ,  0.414645,  0.310067, -0.005806, -0.875633],\n        [-0.757841,  0.357597,  0.353191,  0.027468, -0.780088]],..."
           ]
         }
       ],
       "source": [
-        "assert_array_equal(result_matrix, result_torch)"
+        "assert_array_almost_equal(result_matrix, result_loop)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 336,
       "metadata": {},
       "outputs": [
         {
           "ename": "AssertionError",
-          "evalue": "\nArrays are not equal\n\nMismatched elements: 50 / 50 (100%)\nMax absolute difference: 24.358696\nMax relative difference: 37.983047\n x: array([[[25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],...\n y: array([[[0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],...",
+          "evalue": "\nArrays are not almost equal to 6 decimals\n\nMismatched elements: 30 / 30 (100%)\nMax absolute difference: 1.1894937\nMax relative difference: 17.108639\n x: array([[[-0.737511,  0.418121,  0.302359, -0.0113  , -0.870395],\n        [-0.745576,  0.393842,  0.322722,  0.004232, -0.834106],\n        [-0.74752 ,  0.365238,  0.344328,  0.020905, -0.786164]],...\n y: array([[[ 0.061579, -0.509062, -0.083738, -0.38707 ,  0.319099],\n        [ 0.097306, -0.442378, -0.020034, -0.456165,  0.321708],\n        [ 0.122666, -0.391349,  0.026576, -0.504543,  0.322033]],...",
           "output_type": "error",
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-130-70724e03af6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0massert_array_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_loop\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_torch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;32m<ipython-input-336-110a99f35eec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0massert_array_almost_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_matrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_torch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
             "    \u001b[1;31m[... skipping hidden 2 frame]\u001b[0m\n",
-            "\u001b[1;31mAssertionError\u001b[0m: \nArrays are not equal\n\nMismatched elements: 50 / 50 (100%)\nMax absolute difference: 24.358696\nMax relative difference: 37.983047\n x: array([[[25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],\n        [25., 25., 25., 25., 25.],...\n y: array([[[0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],\n        [0.641304, 0.641304, 0.641304, 0.641304, 0.641304],..."
+            "\u001b[1;31mAssertionError\u001b[0m: \nArrays are not almost equal to 6 decimals\n\nMismatched elements: 30 / 30 (100%)\nMax absolute difference: 1.1894937\nMax relative difference: 17.108639\n x: array([[[-0.737511,  0.418121,  0.302359, -0.0113  , -0.870395],\n        [-0.745576,  0.393842,  0.322722,  0.004232, -0.834106],\n        [-0.74752 ,  0.365238,  0.344328,  0.020905, -0.786164]],...\n y: array([[[ 0.061579, -0.509062, -0.083738, -0.38707 ,  0.319099],\n        [ 0.097306, -0.442378, -0.020034, -0.456165,  0.321708],\n        [ 0.122666, -0.391349,  0.026576, -0.504543,  0.322033]],..."
           ]
         }
       ],
       "source": [
-        "assert_array_equal(result_loop, result_torch)"
+        "assert_array_almost_equal(result_matrix, result_torch)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 316,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "AssertionError",
+          "evalue": "\nArrays are not almost equal to 6 decimals\n\nMismatched elements: 30 / 30 (100%)\nMax absolute difference: 0.05720511\nMax relative difference: 0.13257349\n x: array([[[0.692497, 0.579445, 0.719626, 0.339527, 0.599161],\n        [0.778973, 0.521562, 0.735156, 0.404873, 0.521556],\n        [0.82875 , 0.48351 , 0.725223, 0.488702, 0.483208]],...\n y: array([[[0.723061, 0.558729, 0.724087, 0.36514 , 0.572077],\n        [0.761729, 0.532796, 0.73083 , 0.394851, 0.537442],\n        [0.785138, 0.515186, 0.727293, 0.431497, 0.519029]],...",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-316-12196ff9d0f3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0massert_array_almost_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_loop\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_torch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "    \u001b[1;31m[... skipping hidden 2 frame]\u001b[0m\n",
+            "\u001b[1;31mAssertionError\u001b[0m: \nArrays are not almost equal to 6 decimals\n\nMismatched elements: 30 / 30 (100%)\nMax absolute difference: 0.05720511\nMax relative difference: 0.13257349\n x: array([[[0.692497, 0.579445, 0.719626, 0.339527, 0.599161],\n        [0.778973, 0.521562, 0.735156, 0.404873, 0.521556],\n        [0.82875 , 0.48351 , 0.725223, 0.488702, 0.483208]],...\n y: array([[[0.723061, 0.558729, 0.724087, 0.36514 , 0.572077],\n        [0.761729, 0.532796, 0.73083 , 0.394851, 0.537442],\n        [0.785138, 0.515186, 0.727293, 0.431497, 0.519029]],..."
+          ]
+        }
+      ],
+      "source": [
+        "assert_array_almost_equal(result_loop, result_torch)"
       ]
     },
     {
