--- a/03-AutoAtenção/Aula_2_3_Exercício_Modelo_de_Linguagem_com_auto_atenção.ipynb
+++ b/03-AutoAtenção/Aula_2_3_Exercício_Modelo_de_Linguagem_com_auto_atenção.ipynb
@@ -24,6 +24,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Plano\n",
+        "\n",
+        "- Implementar camada matricialmente e loop\n",
+        "- Usar mesmo pesos nas 2 e implementação do pytorch\n",
+        "- Checar se o resultado é o mesmo (assert)\n",
+        "- Treinar com lr alto, checar se os pesos após o treino são os mesmos\n",
+        "- Criar scheduler para o LR\n",
+        "- Implementar rede (com dropout)\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 314,
       "metadata": {},
