--- a/04-MáscaraCausal/Aula 3_4 - Exercício Modelo de Linguagem com auto atenção e máscara causal.ipynb.ipynb
+++ b/04-MáscaraCausal/Aula 3_4 - Exercício Modelo de Linguagem com auto atenção e máscara causal.ipynb.ipynb
@@ -935,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": 232,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -957,6 +957,9 @@
         "        if self.head_dim * num_heads != embed_dim:\n",
         "            raise ValueError(f\"embed_dim must be divisible by num_heads ({embed_dim}/{num_heads} is not integer).\")\n",
         "\n",
+        "\n",
+        "        #Initialize weights\n",
+        "\n",
         "        #d_model = dv = dk = embed_dim\n",
         "        #h = 1\n",
         "\n",
@@ -975,7 +978,9 @@
         "        for w in [self.wQ, self.wK, self.wV, self.w0]:\n",
         "            torch.nn.init.kaiming_normal_(w)\n",
         "\n",
-        "    def forward(self, query:torch.Tensor, key:torch.Tensor, value:torch.Tensor) -> torch.Tensor:\n",
+        "\n",
+        "\n",
+        "    def forward(self, query:torch.Tensor, key:torch.Tensor, value:torch.Tensor, is_causal:bool=False) -> torch.Tensor:\n",
         "        \"\"\"\n",
         "        Process the inputs using the attention process.\n",
         "\n",
@@ -1007,11 +1012,9 @@
         "        #batch_size, sentence, embed\n",
         "        # to\n",
         "        #batch_size,  n_head, sentence, head_dim\n",
-        "\n",
         "        Q = Q.transpose(0,1).reshape(context_size, batch_size*self.num_heads, self.head_dim).transpose(0,1)\n",
         "        K = K.transpose(0,1).reshape(context_size, batch_size*self.num_heads, self.head_dim).transpose(0,1)\n",
         "        V = V.transpose(0,1).reshape(context_size, batch_size*self.num_heads, self.head_dim).transpose(0,1)\n",
-        "\n",
         "        #Now we have [\n",
         "        # [batch0word0part0, batch0word1part0], \n",
         "        # [batch0word0part1, batch0word1part1],\n",
@@ -1019,9 +1022,22 @@
         "        # [batch1word0part1, batch1word1part1],\n",
         "        #]\n",
         "        \n",
-        "\n",
         "        scores = Q @ K.transpose(-2, -1) #K.permute(0,1,3,2)\n",
         "        scores /= self.dk_root\n",
+        "\n",
+        "        #Apply causal bias\n",
+        "        #(instead of masking out the next values, torch set it values to -inf)\n",
+        "        if is_causal:\n",
+        "            mask = torch.ones((context_size, context_size), dtype=torch.bool)\n",
+        "            mask = mask.tril() #Lower triangular is one\n",
+        "            mask = torch.bitwise_not(mask) #Upper triangular without diagonal is ones\n",
+        "\n",
+        "            attention_bias = torch.zeros((context_size, context_size))\n",
+        "            attention_bias[mask] = -torch.inf\n",
+        "        \n",
+        "            scores += attention_bias\n",
+        "\n",
+        "\n",
         "        probs = torch.softmax(scores, dim=-1)\n",
         "        E = probs @ V\n",
         "\n",
@@ -1029,7 +1045,6 @@
         "        E = E.reshape(batch_size, self.num_heads, context_size, self.head_dim)\n",
         "        E = E.transpose(-3,-2)\n",
         "        E = E.reshape(batch_size, context_size, self.embed_dim)\n",
-        "\n",
         "        #Now we have [\n",
         "        #[batch0word0, batch0word1], \n",
         "        #[batch1word0, batch1word1]\n",
@@ -1059,14 +1074,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 233,
       "metadata": {},
       "outputs": [],
       "source": [
         "test_embed_dim = 4\n",
         "test_num_heads = 2\n",
+        "test_context_size = 3\n",
+        "\n",
         "our_version = MultiHeadAttention(test_embed_dim, num_heads=test_num_heads).eval()\n",
-        "torch_version = torch.nn.MultiheadAttention(test_embed_dim, num_heads=test_num_heads, bias=False, batch_first=True).eval()"
+        "torch_version = torch.nn.MultiheadAttention(test_embed_dim, num_heads=test_num_heads, bias=False, batch_first=True ).eval()"
       ]
     },
     {
@@ -1078,7 +1095,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 234,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1100,49 +1117,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 173,
+      "execution_count": 235,
       "metadata": {},
       "outputs": [],
       "source": [
-        "test_data = torch.rand(2, 3, test_embed_dim) #2 batchs, sequences of 3 words, embed_dim"
+        "test_data = torch.rand(2, test_context_size, test_embed_dim) #2 batchs, sequences of test_context_size words, embed_dim"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Realizamos as operações com as camadas:"
+        "Realizamos as operações com as camadas e verificamos se os resultados são os mesmos, com e sem causalidade:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 174,
+      "execution_count": 242,
       "metadata": {},
       "outputs": [],
       "source": [
-        "result_our = our_version(test_data, test_data, test_data)\n",
-        "result_torch, _ = torch_version(test_data, test_data, test_data, need_weights=False)\n",
+        "attention_mask = torch.nn.Transformer.generate_square_subsequent_mask(test_context_size)\n",
         "\n",
-        "result_our = result_our.detach()\n",
-        "result_torch = result_torch.detach()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "E verificamos se todas as saídas são iguais:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 175,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "assert result_our.shape == result_torch.shape\n",
+        "for is_causal in [False, True]:\n",
         "\n",
-        "assert_array_almost_equal(result_our, result_torch, decimal=5)"
+        "    result_our = our_version(test_data, test_data, test_data, is_causal)\n",
+        "\n",
+        "    if is_causal:\n",
+        "        result_torch, _ = torch_version(test_data, test_data, test_data, need_weights=False, is_causal=True, attn_mask=attention_mask)\n",
+        "    else:\n",
+        "        result_torch, _ = torch_version(test_data, test_data, test_data, need_weights=False)\n",
+        "\n",
+        "    result_our = result_our.detach()\n",
+        "    result_torch = result_torch.detach()\n",
+        "\n",
+        "    assert result_our.shape == result_torch.shape\n",
+        "    assert_array_almost_equal(result_our, result_torch, decimal=5)"
       ]
     },
     {
@@ -1156,15 +1166,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": 243,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "211 µs ± 12.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-            "260 µs ± 21.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+            "208 µs ± 13.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+            "257 µs ± 19.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
           ]
         }
       ],
@@ -1178,8 +1188,7 @@
       "metadata": {},
       "source": [
         "```\n",
-        "Our: 211 µs ± 12.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-        "Loop: 1.79 ms ± 15.1 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+        "Our: 208 µs ± 13.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
         "Torch: 260 µs ± 21.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
         "```"
       ]
