09-Métrica e doc básica

--- a/09-RAG/Aula_8_9_Visconde.ipynb
+++ b/09-RAG/Aula_8_9_Visconde.ipynb
@@ -4,41 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reproduzindo o Visconde"
+    "# Reproduzindo o Visconde\n",
+    "\n",
+    "Elton Cardoso do Nascimento - 233840"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [ ] Conseguir dados\n",
-    "- [ ] Document retrieval\n",
-    "- [ ] Aggregation\n",
-    "- [ ] Answer generation"
+    "> - Reproduzir o Visconde\n",
+    "> - Buscador: BM25 (pyserini) ou um sentence-transformer\n",
+    "> - Geração: LLaMa 3 70B (groq)\n",
+    "> - Avaliação no IIRC (F1, exact_match) usar 10% (150 primeiras perguntas.)\n",
+    "> - Pedir resultado do LLM em JSON para facilitar a avaliação automática\n",
+    "> - Usar exact match e F1-bow como métricas de avaliação\n",
+    "> - Usem o código do Visconde como referência: https://github.com/neuralmind-ai/visconde/\n",
+    "> - Ao indexar a base de busca, indexem apenas os documentos que são utilizados pelas 150 primeiras perguntas. Procurem pela key \"links\". Observem que o uso de segmentação é necessário. Tentei usar slding window baseado nas sentenças. Uma janela com 5 sentenças e 1 ou 2 de overlap é interessante. Podem experimentar outros valores, se houver tempo. Procurem no código do visconde o trecho onde o janelamento é feito e usem como base.\n",
+    "> - Para fazer os exemplos few-shot usem o autocot (ver slides)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Python38\\lib\\site-packages\\thinc\\compat.py:36: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
-      "  hasattr(torch, \"has_mps\")\n",
-      "c:\\Python38\\lib\\site-packages\\thinc\\compat.py:37: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
-      "  and torch.has_mps  # type: ignore[attr-defined]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
     "import time\n",
     "import threading\n",
+    "import unicodedata\n",
+    "import collections\n",
+    "import string\n",
+    "import re\n",
     "from typing import Optional\n",
+    "\n",
     "\n",
     "import pyserini\n",
     "from pyserini.search import SimpleSearcher\n",
@@ -46,6 +47,13 @@
     "import torch #spacy não carrega sem importar antes (??)\n",
     "import spacy\n",
     "import groq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Carregando o Dataset"
    ]
   },
   {
@@ -178,6 +186,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carrega os documentos que estão linkados as questões"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -238,6 +253,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transforma os documentos em chunks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -278,6 +300,13 @@
     "    return treated_documents\n",
     "\n",
     "treated_documents = window(documents, stride, max_length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cria o índice"
    ]
   },
   {
@@ -364,20 +393,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SimpleSearcher class has been deprecated, please use LuceneSearcher from pyserini.search.lucene instead\n"
-     ]
-    }
-   ],
    "source": [
-    "searcher = SimpleSearcher(\"./data/iirc_index\")"
+    "Organiza as questões"
    ]
   },
   {
@@ -395,6 +414,20 @@
     "        q['title'] = item['title']\n",
     "        q['links'] = item['links']\n",
     "        all_q.append(q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prompt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepara o prompt one-shot"
    ]
   },
   {
@@ -429,40 +462,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Roman mythology',\n",
-       " 'contents': 'Roman mythology. In Rome\\'s earliest period, history and myth have a mutual and complementary relationship. As <a href=\"T.%20P.%20Wiseman\">T. P. Wiseman</a> notes:\\nThe Roman stories still <i>matter</i>, as they mattered to <a href=\"Dante\">Dante</a> in 1300 and <a href=\"Shakespeare\">Shakespeare</a> in 1600 and the <a href=\"founding%20fathers%20of%20the%20United%20States\">founding fathers of the United States</a> in 1776. What does it take to be a <a href=\"Roman%20citizenship\">free citizen</a>? Can a <a href=\"superpower\">superpower</a> still be a <a href=\"republic\">republic</a>? How does well-meaning <a href=\"authority\">authority</a> turn into murderous <a href=\"tyranny\">tyranny</a>?',\n",
-       " 'segment': 'In Rome\\'s earliest period, history and myth have a mutual and complementary relationship. As <a href=\"T.%20P.%20Wiseman\">T. P. Wiseman</a> notes:\\nThe Roman stories still <i>matter</i>, as they mattered to <a href=\"Dante\">Dante</a> in 1300 and <a href=\"Shakespeare\">Shakespeare</a> in 1600 and the <a href=\"founding%20fathers%20of%20the%20United%20States\">founding fathers of the United States</a> in 1776. What does it take to be a <a href=\"Roman%20citizenship\">free citizen</a>? Can a <a href=\"superpower\">superpower</a> still be a <a href=\"republic\">republic</a>? How does well-meaning <a href=\"authority\">authority</a> turn into murderous <a href=\"tyranny\">tyranny</a>?',\n",
-       " 'id': 37}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "json.loads(searcher.search(all_q[0][\"question\"], k=2)[0].raw)"
+    "Procura os documentos relacionados a questão e prepara o prompt para a questão"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_result = searcher.search(all_q[0][\"question\"], k=2)"
+    "searcher = SimpleSearcher(\"./data/iirc_index\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_result = searcher.search(all_q[0][\"question\"], k=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,14 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,28 +518,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "type(question_query)"
+    "# Inferência"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Realiza a inferência com o Groq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,6 +614,7 @@
     "                \n",
     "                done = True\n",
     "            except groq.RateLimitError as exception:\n",
+    "                print(\"ERROR\")\n",
     "                GroqInterface.error = exception\n",
     "                if not GroqInterface.SINGLE_THREAD:\n",
     "                    if not GroqInterface.rate_lock.locked():\n",
@@ -614,8 +628,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mensagem do sistema para saída em JSON"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,28 +663,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'evidence': 'According to [Document 2], Zeus is known for burying Typhon, Enceladus, or Briareus under Mount Aetna in Sicily.',\n",
-       " 'answer': 'Burying Typhon, Enceladus, or Briareus under Mount Aetna.'}"
+       "{'evidence': 'According to [Document 11], Zeus is the sky and thunder god in ancient Greek religion, who rules as king of the gods of Mount Olympus. His mythologies and powers are similar, though not identical, to those of Indo-European deities such as Jupiter, Perkūnas, Perun, Indra, and Thor.',\n",
+       " 'answer': 'Zeus is the sky and thunder god and king of the gods in Greek mythology.'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json.loads(answer)"
+    "answer_parsed = json.loads(answer)\n",
+    "answer_parsed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +699,7 @@
        "   'end': 102}]}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +719,7 @@
        "'What is Zeus know for in Greek mythology?'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,11 +729,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Métrica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calcula scores da resposta"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def normalize_answer(s):\n",
+    "  \"\"\"Lower text and remove punctuation, articles and extra whitespace.\"\"\"\n",
+    "  def remove_articles(text):\n",
+    "    regex = re.compile(r'\\b(a|an|the)\\b', re.UNICODE)\n",
+    "    return re.sub(regex, ' ', text)\n",
+    "  def white_space_fix(text):\n",
+    "    return ' '.join(text.split())\n",
+    "  def remove_punc(text):\n",
+    "    exclude = set(string.punctuation)\n",
+    "    return ''.join(ch for ch in text if ch not in exclude)\n",
+    "  def lower(text):\n",
+    "    return text.lower()\n",
+    "  def remove_accents(input_str):\n",
+    "      nfkd_form = unicodedata.normalize('NFKD', input_str)\n",
+    "      only_ascii = nfkd_form.encode('ASCII', 'ignore')\n",
+    "      return only_ascii.decode(\"utf-8\")\n",
+    "\n",
+    "  return white_space_fix(remove_articles(remove_punc(lower(remove_accents(s)))))\n",
+    "\n",
+    "def get_tokens(s):\n",
+    "  if not s: return []\n",
+    "  return normalize_answer(s).split()\n",
+    "\n",
+    "def compute_exact(a_gold, a_pred):\n",
+    "  return int(normalize_answer(a_gold) == normalize_answer(a_pred))\n",
+    "\n",
+    "def compute_f1(a_gold, a_pred):\n",
+    "  gold_toks = get_tokens(a_gold)\n",
+    "  pred_toks = get_tokens(a_pred)\n",
+    "  common = collections.Counter(gold_toks) & collections.Counter(pred_toks)\n",
+    "  num_same = sum(common.values())\n",
+    "  if len(gold_toks) == 0 or len(pred_toks) == 0:\n",
+    "    # If either is no-answer, then F1 is 1 if they agree, 0 otherwise\n",
+    "    return int(gold_toks == pred_toks)\n",
+    "  if num_same == 0:\n",
+    "    return 0\n",
+    "  precision = 1.0 * num_same / len(pred_toks)\n",
+    "  recall = 1.0 * num_same / len(gold_toks)\n",
+    "  f1 = (2 * precision * recall) / (precision + recall)\n",
+    "  return f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_gold = all_q[0][\"answer\"][\"answer_spans\"][0][\"text\"]\n",
+    "a_pred = answer_parsed[\"answer\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.47058823529411764"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_f1(a_gold, a_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_exact(a_gold, a_pred)"
+   ]
   }
  ],
  "metadata": {
